cmake_minimum_required(VERSION 3.8)
project(atwork_commander_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)


rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Object.msg"
  "msg/RobotHeader.msg"
  "msg/RobotState.msg"
  "msg/Task.msg"
  "msg/Workstation.msg"
  "msg/RefboxState.msg"
  "msg/Transport.msg"
  "msg/ObjectTask.msg"

  "srv/Arena.srv"
  "srv/StartTask.srv"
  "srv/GenerateTask.srv"
  "srv/LoadTask.srv"
  "srv/StateUpdate.srv"

  DEPENDENCIES std_msgs geometry_msgs nav_msgs builtin_interfaces
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(rosidl_default_runtime)

ament_export_include_directories(include)

install(
  DIRECTORY include/
  DESTINATION include
)

ament_export_dependencies(
  rosidl_default_runtime
  std_msgs
  geometry_msgs
  nav_msgs
  builtin_interfaces
)


ament_package()
